--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,25 +22,17 @@
             app:layout_constraintRight_toRightOf="parent"
             android:background="@color/black">
 
-            <View
-                android:id="@+id/lineView"
-                android:layout_width="5dp"
-                android:layout_height="match_parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:background="@color/black"
-                android:forceHasOverlappingRendering="true"
-                />
+
 
             <Button
                 android:id="@+id/HourView"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
                 android:text="12"
                 android:textColor="@color/white"
-                android:textSize="120sp"
+                android:textSize="100sp"
                 android:textAlignment="center"
-                android:layout_marginEnd="10dp"
+                android:layout_marginEnd="5dp"
                 app:layout_constraintEnd_toStartOf="@+id/lineView"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -50,14 +42,14 @@
 
             <Button
                 android:id="@+id/MinView"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
                 android:text="00"
                 android:textColor="@color/white"
-                android:textSize="120sp"
+                android:textSize="100sp"
                 android:textAlignment="center"
-                android:layout_marginStart="10dp"
-                app:layout_constraintStart_toStartOf="@+id/lineView"
+                android:layout_marginStart="5dp"
+                app:layout_constraintStart_toEndOf="@+id/lineView"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:background="@drawable/rectangle_1"
@@ -76,63 +68,51 @@
                 app:layout_constraintTop_toTopOf="parent"
                 />
 
+            <Button
+                android:id="@+id/lineView"
+                android:layout_width="5dp"
+                android:layout_height="match_parent"
+                android:textColor="@color/white"
+                android:textAlignment="center"
+                android:translationZ="100dp"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:background="@color/black"
+                android:forceHasOverlappingRendering="true"
+                />
+
+            <Button
+                android:id="@+id/SecView"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginBottom="56dp"
+                android:background="@drawable/rectangle_1"
+                android:backgroundTint="@color/button_background"
+                android:text="00"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="30sp"
+                app:layout_constraintTop_toTopOf="@id/midLine"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/MinView" />
+
+            <Button
+                android:id="@+id/AmPmView"
+                android:layout_width="35dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginBottom="56dp"
+                android:background="@drawable/rectangle_1"
+                android:backgroundTint="@color/button_background"
+                android:text="AM"
+                android:textSize="15sp"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                app:layout_constraintStart_toStartOf="@id/HourView"
+                app:layout_constraintTop_toTopOf="@+id/HourView"
+                />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-
     </FrameLayout>
-
-
-
-<!--    <FrameLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="250dp"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        android:background="@color/black">-->
-
-<!--        <View-->
-<!--            android:id="@+id/lineView"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="4dp"-->
-<!--            android:layout_gravity="center"-->
-<!--            android:background="@color/black"-->
-<!--            android:forceHasOverlappingRendering="true"-->
-<!--            android:translationZ="100dp" />-->
-
-<!--        <View-->
-<!--            android:id="@+id/midLine"-->
-<!--            android:layout_width="4dp"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:layout_gravity="center"-->
-<!--            android:background="@color/black"-->
-<!--            android:forceHasOverlappingRendering="true"-->
-<!--            android:translationZ="100dp" />-->
-
-
-<!--        <Button-->
-<!--            android:id="@+id/HourView"-->
-<!--            android:layout_width="120dp"-->
-<!--            android:layout_height="120dp"-->
-<!--            android:layout_margin="15dp"-->
-<!--            android:background="@drawable/rectangle_1"-->
-<!--            android:backgroundTint="@color/button_background"-->
-<!--            android:text="12"-->
-<!--            android:textColor="@color/white"-->
-<!--            android:textSize="100sp" />-->
-
-<!--        <Button-->
-<!--            android:id="@+id/MinView"-->
-<!--            android:layout_width="120dp"-->
-<!--            android:layout_height="120dp"-->
-<!--            android:layout_margin="15dp"-->
-<!--            android:background="@drawable/rectangle_1"-->
-<!--            android:backgroundTint="@color/button_background"-->
-<!--            android:text="00"-->
-<!--            android:textColor="@color/white"-->
-<!--            android:textSize="100sp" />-->
-<!--        -->
-<!--    </FrameLayout>-->
-
-
 </LinearLayout>
